--- a/views/home.html
+++ b/views/home.html
@@ -2,13 +2,21 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <title>Mercado Liebre</title>
 </head>
 <body>
-    <header>
-        <div><img src="/images/logo-mercado-liebre.svg" alt="logo"/></div>
-        <nav>Lugar para poner barra de busqueda</nav>
-        <div>Compra en cuotas y sin tarjetas de credito</div>
+    <header class="header">
+        <div class="logo"><img src="/images/logo-mercado-liebre.svg" alt="logo"/></div>
+        <nav>
+            <p><input class="search" type="search" placeholder="Buscar productos, marcas"></p>
+            <p><i class="fas fa-search fondo-lupa"></i></p>
+        </nav>
+        <div class="centrar-mensaje"><p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjetas de credito</p></div>
         <nav>
             <ul>
                 <li><a href="#">Ofertas</a></li>
@@ -17,86 +25,100 @@
                 <li><a href="#">Ayuda</a></li>
             </ul>
             <ul>
-                <li><a href="#">Creá tu cuenta</a></li>
-                <li><a href="#">Ingresá</a></li>
-                <li><a href="#">Mis Compras</a></li>
+                <li><a href="#">Creá tu cuenta</a><i class="far fa-address-card"></i></li>
+                <li><a href="#">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
+                <li><a href="#">Mis Compras</a><i class="fas fa-shopping-basket"></i></li>
             </ul>
+        </nav>
+        <nav class="centrar">
+            <div><i class="fas fa-bars fondo-color"></i></div>
         </nav>
     </header>
     <section>
-        <h2>Basado en tu ultima Visita</h2>
+        <h2 class="titulares">Basado en tu ultima Visita</h2>
         <article>
             <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-            <p>$6.770</p>
-            <p>40% OFF</p> 
-            <p>Cafetera Moulinex</p>
+            <p class="precios">$6.770</p>
+            <p class="descuentos">40% OFF</p> 
+            <p class="descripciones">Cafetera Moulinex</p>
         </article>
         <article>
             <img src="/images/img-macbook-pro-2019.jpg" alt="mac-book">
-            <p>$230.000</p>
-            <p>20% of</p>
-            <p>MacBook Pro 2019</p>
+            <p class="precios">$230.000</p>
+            <p class="descuentos">20% of</p>
+            <p class="descripciones">MacBook Pro 2019</p>
         </article>
         <article>
             <img src="/images/img-samsung-galaxy-s10.jpg" alt="galaxy-s10">
-            <p>$70.500</p>
-            <p>10% of</p>
-            <p>Samsung Galaxy S10</p>
+            <p class="precios">$70.500</p>
+            <p class="descuentos">10% of</p>
+            <p class="descripciones">Samsung Galaxy S10</p>
         </article>
         <article>
             <img src="/images/img-tv-samsung-smart.jpg" alt="smartv-samsung">
-            <p>$23.200</p>
-            <p>5% off</p>
-            <p>SmartTv Samsung 43"</p>
+            <p class="precios">$23.200</p>
+            <p class="descuentos">5% off</p>
+            <p class="descripciones">SmartTv Samsung 43"</p>
         </article>
     </section>
     <section>
         <h2>Ofertas</h2>
         <article>
             <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-            <p>$6.770</p>
-            <p>40% OFF</p> 
-            <p>Cafetera Moulinex</p>
+            <p class="precios">$6.770</p>
+            <p class="descuentos">40% OFF</p> 
+            <p class="descripciones">Cafetera Moulinex</p>
         </article>
         <article>
             <img src="/images/img-macbook-pro-2019.jpg" alt="mac-book">
-            <p>$230.000</p>
-            <p>20% of</p>
-            <p>MacBook Pro 2019</p>
+            <p class="precios">$230.000</p>
+            <p class="descuentos">20% of</p>
+            <p class="descripciones">MacBook Pro 2019</p>
         </article>
         <article>
             <img src="/images/img-samsung-galaxy-s10.jpg" alt="galaxy-s10">
-            <p>$70.500</p>
-            <p>10% of</p>
-            <p>Samsung Galaxy S10</p>
+            <p class="precioes">$70.500</p>
+            <p class="descuentoes">10% of</p>
+            <p class="descripciones">Samsung Galaxy S10</p>
         </article>
         <article>
             <img src="/images/img-tv-samsung-smart.jpg" alt="smartv-samsung">
-            <p>$23.200</p>
-            <p>5% off</p>
-            <p>SmartTv Samsung 43"</p>
+            <p class="precios">$23.200</p>
+            <p class="descuentos">5% off</p>
+            <p class="descripciones">SmartTv Samsung 43"</p>
         </article>
     </section>
     <footer>
     <section>
-        <h2>Pagá con tarjeta o en efectivo</h2>
-        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+        <div class="centrar"><i class="fas fa-credit-card"></i></div>
+        <div class="textos-footer">
+            <h2>Pagá con tarjeta o en efectivo</h2>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
             puntos de pago. ¡Y siempre es seguro!
             </p>
+        </div>
     </section>
     <section>
-        <h2>Envío gratis desde $ 2.500</h2>
-        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+        <div class="centrar"><i class="fas fa-gift"></i></div>
+        <div class="textos-footer">
+            <h2>Envío gratis desde $ 2.500</h2>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
             productos. Es un beneficio de Mercado Puntos.</p>
+        </div>
     </section>
     <section>
-        <h2>Seguridad, de principio a fin</h2>
-        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegid@.
-            </p>
+        <div class="centrar"><i class="fas fa-user-shield"></i></div>
+            <div class="textos-footer">
+                <h2>Seguridad, de principio a fin</h2>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.
+                </p>
+            </div>
     </section>
     <section>
-        <p>Copyright © 1999-2020 MercadoLiebre S.R.L</p>
+        <div>
+            <p>Copyright © 1999-2020 MercadoLiebre S.R.L</p>
+        </div>
     </section>
     </footer>
 </body>
