--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,63 +1,67 @@
-.header{
-    background-color:#EAC926;
+/* Paleta de colores
+Amarillo: #EAC926;
+Azul: #03264C;
+Celeste: #1259c3;
+Gris oscuro: #666;
+Gris claro: #ebebeb;
+Verde: #39b54a; */
+
+
+body {
     font-family: 'Roboto', sans-serif;
-    font-size: 12px;
 }
-.textos{
-    font-family: 'Roboto', sans-serif;
+
+.header-container{
+    background-color:#EAC926;
+   
+}
+.cuerpo-texto{
     font-size: 12px;
 }
 .titulares{
-    font-family: 'Roboto', sans-serif;
     font-size: 24px;
 }
-.precios{
-    font-family: 'Roboto', sans-serif;
+.precio{
     font-size: 18px;
 }
-.descuentos{
-    font-family: 'Roboto', sans-serif;
+.desc{
     font-size: 16px;
 }
-.descripciones{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+.burger{
+    color: white;
+    text-align: center;
+    margin-bottom: 10px;
+    height: 100px;
 }
-.centrar{
+.burger a{
+    background-color: blue;
     text-align: center;
     font-size: 70px;
-    line-height: 1.5;
-    color: #1259c3;
-}
-.fondo-color{
-    height: 100px;
-    width: 100px;
-    background-color:#1259c3;
-    color:white;
     padding: 10px;
+    border-radius: 5px;
+}
+.footer-container{
+    text-align: center;
+}
+.icono-footer{
+    text-align: center;
+    color:#1259c3;
+    margin-bottom: 10px;
+    size: 2em;
+}
+.lupa{
+    background-color:#ebebeb;
+    height: 35px;
+    width: 35px;
     border-radius: 5px;
 }
 .search{
-    width: 400px;
-    font-size: 26px;
+    width: 480px;
+    font-size: 24px;
 }
 .logo{
-    width: 360px;
+    width: 480px;
 }
-.centrar-mensaje{
-    text-align: center;
-    line-height: 1.5;
-}
-.fondo-lupa{
-    height: 20px;
-    width: 20px;
-    background-color:white;
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
-}
-.textos-footer{
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    text-align: center;
+.forma-pago{
+    font-size: 12px;
 }
