--- a/views/home.html
+++ b/views/home.html
@@ -2,124 +2,150 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+
     <title>Mercado Liebre</title>
 </head>
+
 <body>
-    <header class="header">
-        <div class="logo"><img src="/images/logo-mercado-liebre.svg" alt="logo"/></div>
-        <nav>
-            <p><input class="search" type="search" placeholder="Buscar productos, marcas"></p>
-            <p><i class="fas fa-search fondo-lupa"></i></p>
-        </nav>
-        <div class="centrar-mensaje"><p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjetas de credito</p></div>
-        <nav>
-            <ul>
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">Vender</a></li>
-                <li><a href="#">Ayuda</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Creá tu cuenta</a><i class="far fa-address-card"></i></li>
-                <li><a href="#">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
-                <li><a href="#">Mis Compras</a><i class="fas fa-shopping-basket"></i></li>
-            </ul>
-        </nav>
-        <nav class="centrar">
-            <div><i class="fas fa-bars fondo-color"></i></div>
-        </nav>
-    </header>
-    <section>
-        <h2 class="titulares">Basado en tu ultima Visita</h2>
-        <article>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-            <p class="precios">$6.770</p>
-            <p class="descuentos">40% OFF</p> 
-            <p class="descripciones">Cafetera Moulinex</p>
-        </article>
-        <article>
-            <img src="/images/img-macbook-pro-2019.jpg" alt="mac-book">
-            <p class="precios">$230.000</p>
-            <p class="descuentos">20% of</p>
-            <p class="descripciones">MacBook Pro 2019</p>
-        </article>
-        <article>
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="galaxy-s10">
-            <p class="precios">$70.500</p>
-            <p class="descuentos">10% of</p>
-            <p class="descripciones">Samsung Galaxy S10</p>
-        </article>
-        <article>
-            <img src="/images/img-tv-samsung-smart.jpg" alt="smartv-samsung">
-            <p class="precios">$23.200</p>
-            <p class="descuentos">5% off</p>
-            <p class="descripciones">SmartTv Samsung 43"</p>
-        </article>
-    </section>
-    <section>
-        <h2>Ofertas</h2>
-        <article>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-            <p class="precios">$6.770</p>
-            <p class="descuentos">40% OFF</p> 
-            <p class="descripciones">Cafetera Moulinex</p>
-        </article>
-        <article>
-            <img src="/images/img-macbook-pro-2019.jpg" alt="mac-book">
-            <p class="precios">$230.000</p>
-            <p class="descuentos">20% of</p>
-            <p class="descripciones">MacBook Pro 2019</p>
-        </article>
-        <article>
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="galaxy-s10">
-            <p class="precioes">$70.500</p>
-            <p class="descuentoes">10% of</p>
-            <p class="descripciones">Samsung Galaxy S10</p>
-        </article>
-        <article>
-            <img src="/images/img-tv-samsung-smart.jpg" alt="smartv-samsung">
-            <p class="precios">$23.200</p>
-            <p class="descuentos">5% off</p>
-            <p class="descripciones">SmartTv Samsung 43"</p>
-        </article>
-    </section>
-    <footer>
-    <section>
-        <div class="centrar"><i class="fas fa-credit-card"></i></div>
-        <div class="textos-footer">
-            <h2>Pagá con tarjeta o en efectivo</h2>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!
-            </p>
-        </div>
-    </section>
-    <section>
-        <div class="centrar"><i class="fas fa-gift"></i></div>
-        <div class="textos-footer">
-            <h2>Envío gratis desde $ 2.500</h2>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-            productos. Es un beneficio de Mercado Puntos.</p>
-        </div>
-    </section>
-    <section>
-        <div class="centrar"><i class="fas fa-user-shield"></i></div>
-            <div class="textos-footer">
-                <h2>Seguridad, de principio a fin</h2>
-                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.
-                </p>
-            </div>
-    </section>
-    <section>
+    <header class="header-container">
         <div>
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L</p>
+            <img class="logo" src="./images/logo-mercado-liebre.svg"/>
+            <div>
+                <span><input class="search" type="search" placeholder="Buscar productos, marcas"></span>
+                <span><p><i class="fas fa-search lupa"></i></p></span>
+            </div>
+            <div>
+                <span><i class="fas fa-hand-holding-usd"></i><a>Comprá en cuotas y sin tarjeta de crédito</a></span>
+            </div>
         </div>
-    </section>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Tiendas Oficiales</a></li>
+                    <li><a href="#">Vender</a></li>
+                    <li><a href="#">Ayuda</a></li>
+                </ul>
+                <br>
+                <ul>
+                    <li><a href="#"">Creá tu cuentas</a><i class="fas fa-address-card"></i></li>
+                    <li><a href="#">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
+                    <li><a href="#">Mis compras</a><i class="fas fa-shopping-basket"></i></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="burger"><a><i class="fas fa-bars"></i></a></div>
+    </header>
+    <main>
+        <div class="main-container">
+            <div class="ultima-visita">
+                <span><h3 class="titulares">Basado en tu última visita</h3></span>
+                <div class="articulo">
+                    <img src="/images/img-cafetera-moulinex.jpg">
+                    <div class="detalle">
+                        <p class="precio">$ 230.000</p>
+                        <p class="desc">20% off</p>
+                        <p class="desc">Cafetera Moulinex</p>
+                    </div>
+                </div>
+                <div class="articulo">
+                    <img src="/images/img-macbook-pro-2019.jpg">
+                    <div class="detalle">
+                        <p class="precio">$230.000</p>
+                        <p class="desc">20% off</p>
+                        <p class="desc">MacBook Pro 2019</p>
+                    </div>
+                </div>
+                <div class="articulo">
+                    <img src="/images/img-samsung-galaxy-s10.jpg">
+                    <div class="detalle">
+                        <p class="precio">$70.500</p>
+                        <p class="desc">10% off</p>
+                        <p class="desc">Samsung Galaxy S10</p>
+                    </div>
+                </div>
+                <div class="articulo">
+                    <img src="/images/img-tv-samsung-smart.jpg">
+                    <div class="detalle">
+                        <p class="precio">$23.200</p>
+                        <p class="desc">5% off</p>
+                        <p class="desc">Smartv Samsung 43"</p>
+                    </div>
+                </div>
+            </div>
+            <spa><h3>Ofertas</h3></spa>
+            <div class="ofertas">
+                <div class="articulo">
+                    <img src="/images/img-cafetera-moulinex.jpg">
+                    <div class="detalle">
+                        <p class="precio">$ 230.000</p>
+                        <p class="desc">20% off</p>
+                        <p class="desc">Cafetera Moulinex</p>
+                    </div>
+                </div>
+                <div class="articulo">
+                    <img src="/images/img-macbook-pro-2019.jpg">
+                    <div class="detalle">
+                        <p class="precio">$230.000</p>
+                        <p class="desc">20% off</p>
+                        <p class="desc">MacBook Pro 2019</p>
+                    </div>
+                </div>
+                <div class="articulo">
+                    <img src="/images/img-samsung-galaxy-s10.jpg">
+                    <div class="detalle">
+                        <p class="precio">$70.500</p>
+                        <p class="desc">10% off</p>
+                        <p class="desc">Samsung Galaxy S10</p>
+                    </div>
+                </div>
+                <div class="articulo">
+                    <img src="/images/img-tv-samsung-smart.jpg">
+                    <div class="detalle">
+                        <p class="precio">$23.200</p>
+                        <p class="desc">5% off</p>
+                        <p class="desc">Smartv Samsung 43"</p>
+                    </div>
+                </div>
+            </div>
+            
+
+        </div>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <div class="forma-pago">
+                <div class="icono-footer"><i class="fas fa-credit-card"></i></div>
+                <span><h3>Pagá con tarjeta o en efectivo</h3></span>
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p><br>
+            </div>
+            <div class="envio">
+                <div class="icono-footer"><i class="fas fa-gift"></i></div>
+                <span><h3>Envío gratis desde $ 2.500</h3></span>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.
+                    </p><br>
+            </div>
+            <div class="seguridad">
+                <div class="icono-footer"><i class="fas fa-user-shield"></i></div>
+                <span><h3>Seguridad, de principio a fin</h3></span>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.
+                    </p><br>
+            </div>
+            <div class="copyrigth">
+                <span><h3>Copyright © 1999-2020 MercadoLiebre S.R.L</h3></span>
+            </div>
+        </div>
     </footer>
+    
 </body>
 </html>
