--- a/views/home.html
+++ b/views/home.html
@@ -35,7 +35,7 @@
                 </ul>
                 <br>
                 <ul>
-                    <li><a href="#"">Creá tu cuentas</a><i class="fas fa-address-card"></i></li>
+                    <li><a href="#">Creá tu cuentas</a><i class="fas fa-address-card"></i></li>
                     <li><a href="#">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
                     <li><a href="#">Mis compras</a><i class="fas fa-shopping-basket"></i></li>
                 </ul>
@@ -43,37 +43,41 @@
         </div>
         <div class="burger"><a><i class="fas fa-bars"></i></a></div>
     </header>
-    <main>
-        <div class="main-container">
+    <main class="main-container">
+        <div>
             <div class="ultima-visita">
                 <span><h3 class="titulares">Basado en tu última visita</h3></span>
                 <div class="articulo">
-                    <img src="/images/img-cafetera-moulinex.jpg">
+                    <img class="img" src="/images/img-cafetera-moulinex.jpg">
                     <div class="detalle">
+                        <div><i class="fas fa-truck circulo-envio"></i></div>
                         <p class="precio">$ 230.000</p>
                         <p class="desc">20% off</p>
                         <p class="desc">Cafetera Moulinex</p>
                     </div>
                 </div>
                 <div class="articulo">
-                    <img src="/images/img-macbook-pro-2019.jpg">
+                    <img class="img" src="/images/img-macbook-pro-2019.jpg">
                     <div class="detalle">
+                        <div><i class="fas fa-truck circulo-envio"></i></div>
                         <p class="precio">$230.000</p>
                         <p class="desc">20% off</p>
                         <p class="desc">MacBook Pro 2019</p>
                     </div>
                 </div>
                 <div class="articulo">
-                    <img src="/images/img-samsung-galaxy-s10.jpg">
+                    <img class="img" src="/images/img-samsung-galaxy-s10.jpg">
                     <div class="detalle">
+                        <div><i class="fas fa-truck circulo-envio"></i></div>
                         <p class="precio">$70.500</p>
                         <p class="desc">10% off</p>
                         <p class="desc">Samsung Galaxy S10</p>
                     </div>
                 </div>
                 <div class="articulo">
-                    <img src="/images/img-tv-samsung-smart.jpg">
+                    <img class="img" src="/images/img-tv-samsung-smart.jpg">
                     <div class="detalle">
+                        <div><i class="fas fa-truck circulo-envio"></i></div>
                         <p class="precio">$23.200</p>
                         <p class="desc">5% off</p>
                         <p class="desc">Smartv Samsung 43"</p>
@@ -83,40 +87,42 @@
             <spa><h3>Ofertas</h3></spa>
             <div class="ofertas">
                 <div class="articulo">
-                    <img src="/images/img-cafetera-moulinex.jpg">
+                    <img class="img" src="/images/img-cafetera-moulinex.jpg">
                     <div class="detalle">
+                        <div><i class="fas fa-truck circulo-envio"></i></div>
                         <p class="precio">$ 230.000</p>
                         <p class="desc">20% off</p>
                         <p class="desc">Cafetera Moulinex</p>
                     </div>
                 </div>
                 <div class="articulo">
-                    <img src="/images/img-macbook-pro-2019.jpg">
+                    <img class="img" src="/images/img-macbook-pro-2019.jpg">
                     <div class="detalle">
+                        <div><i class="fas fa-truck circulo-envio"></i></div>
                         <p class="precio">$230.000</p>
                         <p class="desc">20% off</p>
                         <p class="desc">MacBook Pro 2019</p>
                     </div>
                 </div>
                 <div class="articulo">
-                    <img src="/images/img-samsung-galaxy-s10.jpg">
+                    <img class="img" src="/images/img-samsung-galaxy-s10.jpg">
                     <div class="detalle">
+                        <div><i class="fas fa-truck circulo-envio"></i></div>
                         <p class="precio">$70.500</p>
                         <p class="desc">10% off</p>
                         <p class="desc">Samsung Galaxy S10</p>
                     </div>
                 </div>
                 <div class="articulo">
-                    <img src="/images/img-tv-samsung-smart.jpg">
+                    <img class="img" src="/images/img-tv-samsung-smart.jpg">
                     <div class="detalle">
+                        <div><i class="fas fa-truck circulo-envio"></i></div>
                         <p class="precio">$23.200</p>
                         <p class="desc">5% off</p>
                         <p class="desc">Smartv Samsung 43"</p>
                     </div>
                 </div>
             </div>
-            
-
         </div>
     </main>
     <footer>
@@ -146,6 +152,5 @@
             </div>
         </div>
     </footer>
-    
 </body>
 </html>
