--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@ Verde: #39b54a; */
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #ebebeb;
 }
 
 .header-container{
@@ -44,6 +45,7 @@ body {
     text-align: center;
 }
 .icono-footer{
+    display: block;
     text-align: center;
     color:#1259c3;
     margin-bottom: 10px;
@@ -64,4 +66,36 @@ body {
 }
 .forma-pago{
     font-size: 12px;
+}
+.main-container{
+    width: 90%;
+    background-color: #ebebeb;
+    margin-right: auto;
+    margin-left: auto;
+
+}
+.articulo{
+    margin-bottom: 10px;
+    border-top: 1px;
+    border-top-color: #ebebeb;
+    margin: 15px;
+}
+.circulo-envio{
+    height: 70px;
+    width: 70px;
+    border-radius: 50px;
+    border: 1px green solid;
+    font-size: 20px;
+    text-align: center;
+    color: green;
+}
+.detalle{
+    border-top: 1px #ebebeb solid;
+    background-color: white;
+    text-align: left;
+}
+.img { 
+    width: 100%;
+    height: 100%;
+    /* display: block; margin: auto;  */
 }
